tests/parser/fail/class-field-name-collision.som
"test:
failMessage:
  - contains: foo
  - contains: defined twice
"

ClassFieldNameCollision = (
  ----

  |a foo b c foo d|
)
